build/log/idf_py_stdout_output_57187
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/vl/esp32/project_my/esp32s3_lvgl/build/bootloader/esp-idf/esptool_py && /home/vl/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/vl/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/vl/esp32/project_my/esp32s3_lvgl/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/bsp/CMakeFiles/__idf_bsp.dir/ov5640.c.obj
FAILED: esp-idf/bsp/CMakeFiles/__idf_bsp.dir/ov5640.c.obj 
/home/vl/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/vl/esp32/project_my/esp32s3_lvgl/build/config -I/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp -I/home/vl/esp32/esp-idf/components/newlib/platform_include -I/home/vl/esp32/esp-idf/components/freertos/config/include -I/home/vl/esp32/esp-idf/components/freertos/config/include/freertos -I/home/vl/esp32/esp-idf/components/freertos/config/xtensa/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/vl/esp32/esp-idf/components/freertos/esp_additions/include -I/home/vl/esp32/esp-idf/components/esp_hw_support/include -I/home/vl/esp32/esp-idf/components/esp_hw_support/include/soc -I/home/vl/esp32/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/vl/esp32/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/vl/esp32/esp-idf/components/heap/include -I/home/vl/esp32/esp-idf/components/log/include -I/home/vl/esp32/esp-idf/components/soc/include -I/home/vl/esp32/esp-idf/components/soc/esp32s3 -I/home/vl/esp32/esp-idf/components/soc/esp32s3/include -I/home/vl/esp32/esp-idf/components/hal/platform_port/include -I/home/vl/esp32/esp-idf/components/hal/esp32s3/include -I/home/vl/esp32/esp-idf/components/hal/include -I/home/vl/esp32/esp-idf/components/esp_rom/include -I/home/vl/esp32/esp-idf/components/esp_rom/include/esp32s3 -I/home/vl/esp32/esp-idf/components/esp_rom/esp32s3 -I/home/vl/esp32/esp-idf/components/esp_common/include -I/home/vl/esp32/esp-idf/components/esp_system/include -I/home/vl/esp32/esp-idf/components/esp_system/port/soc -I/home/vl/esp32/esp-idf/components/esp_system/port/include/private -I/home/vl/esp32/esp-idf/components/xtensa/esp32s3/include -I/home/vl/esp32/esp-idf/components/xtensa/include -I/home/vl/esp32/esp-idf/components/xtensa/deprecated_include -I/home/vl/esp32/esp-idf/components/lwip/include -I/home/vl/esp32/esp-idf/components/lwip/include/apps -I/home/vl/esp32/esp-idf/components/lwip/include/apps/sntp -I/home/vl/esp32/esp-idf/components/lwip/lwip/src/include -I/home/vl/esp32/esp-idf/components/lwip/port/include -I/home/vl/esp32/esp-idf/components/lwip/port/freertos/include -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/vl/esp32/esp-idf/components/esp_lcd/include -I/home/vl/esp32/esp-idf/components/esp_lcd/interface -I/home/vl/esp32/esp-idf/components/driver/include -I/home/vl/esp32/esp-idf/components/driver/deprecated -I/home/vl/esp32/esp-idf/components/driver/analog_comparator/include -I/home/vl/esp32/esp-idf/components/driver/dac/include -I/home/vl/esp32/esp-idf/components/driver/gpio/include -I/home/vl/esp32/esp-idf/components/driver/gptimer/include -I/home/vl/esp32/esp-idf/components/driver/i2c/include -I/home/vl/esp32/esp-idf/components/driver/i2s/include -I/home/vl/esp32/esp-idf/components/driver/ledc/include -I/home/vl/esp32/esp-idf/components/driver/mcpwm/include -I/home/vl/esp32/esp-idf/components/driver/parlio/include -I/home/vl/esp32/esp-idf/components/driver/pcnt/include -I/home/vl/esp32/esp-idf/components/driver/rmt/include -I/home/vl/esp32/esp-idf/components/driver/sdio_slave/include -I/home/vl/esp32/esp-idf/components/driver/sdmmc/include -I/home/vl/esp32/esp-idf/components/driver/sigma_delta/include -I/home/vl/esp32/esp-idf/components/driver/spi/include -I/home/vl/esp32/esp-idf/components/driver/temperature_sensor/include -I/home/vl/esp32/esp-idf/components/driver/touch_sensor/include -I/home/vl/esp32/esp-idf/components/driver/twai/include -I/home/vl/esp32/esp-idf/components/driver/uart/include -I/home/vl/esp32/esp-idf/components/driver/usb_serial_jtag/include -I/home/vl/esp32/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/vl/esp32/esp-idf/components/esp_pm/include -I/home/vl/esp32/esp-idf/components/esp_ringbuf/include -I/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl -I/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/src -I/home/vl/esp32/project_my/esp32s3_lvgl/components -I/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/examples -I/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/demos -I/home/vl/esp32/esp-idf/components/esp_timer/include -I/home/vl/esp32/esp-idf/components/sdmmc/include -I/home/vl/esp32/esp-idf/components/fatfs/diskio -I/home/vl/esp32/esp-idf/components/fatfs/src -I/home/vl/esp32/esp-idf/components/fatfs/vfs -I/home/vl/esp32/esp-idf/components/wear_levelling/include -I/home/vl/esp32/esp-idf/components/esp_partition/include -I/home/vl/esp32/project_my/esp32s3_lvgl/managed_components/espressif__esp32-camera/driver/include -I/home/vl/esp32/project_my/esp32s3_lvgl/managed_components/espressif__esp32-camera/conversions/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/vl/esp32/project_my/esp32s3_lvgl=. -fmacro-prefix-map=/home/vl/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bsp/CMakeFiles/__idf_bsp.dir/ov5640.c.obj -MF esp-idf/bsp/CMakeFiles/__idf_bsp.dir/ov5640.c.obj.d -o esp-idf/bsp/CMakeFiles/__idf_bsp.dir/ov5640.c.obj -c /home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c
/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c: In function 'camera_init':
/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c:107:5: error: implicit declaration of function 'init_rgb_lut' [-Werror=implicit-function-declaration]
  107 |     init_rgb_lut();
      |     ^~~~~~~~~~~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c: At top level:
/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c:115:6: warning: conflicting types for 'init_rgb_lut'; have 'void()'
  115 | void init_rgb_lut() {
      |      ^~~~~~~~~~~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/bsp/ov5640.c:107:5: note: previous implicit declaration of 'init_rgb_lut' with type 'void()'
  107 |     init_rgb_lut();
      |     ^~~~~~~~~~~~
cc1: some warnings being treated as errors
[5/11] Building CXX object esp-idf/tensorflow_lite/CMakeFiles/__idf_tensorflow_lite.dir/function.cc.obj
In file included from /home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/src/core/lv_obj.h:140,
                 from /home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/lvgl.h:35,
                 from /home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/../bsp/ov5640.h:5,
                 from /home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc:13:
/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/src/core/lv_obj_style.h: In function 'void lv_obj_remove_style_all(_lv_obj_t*)':
/home/vl/esp32/project_my/esp32s3_lvgl/components/lvgl/src/core/lv_obj_style.h:94:48: warning: bitwise operation between different enumeration types '<unnamed enum>' and '<unnamed enum>' is deprecated [-Wdeprecated-enum-enum-conversion]
   94 |     lv_obj_remove_style(obj, NULL, LV_PART_ANY | LV_STATE_ANY);
      |                                    ~~~~~~~~~~~~^~~~~~~~~~~~~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc: In function 'void loop()':
/home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc:121:23: warning: unsigned conversion from 'int' to 'uint8_t' {aka 'unsigned char'} changes value from '480' to '224' [-Woverflow]
  121 |         img_get_float(480, 320, (float *)input->data.f);
      |                       ^~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc:121:28: warning: unsigned conversion from 'int' to 'uint8_t' {aka 'unsigned char'} changes value from '320' to '64' [-Woverflow]
  121 |         img_get_float(480, 320, (float *)input->data.f);
      |                            ^~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc:124:21: warning: unsigned conversion from 'int' to 'uint8_t' {aka 'unsigned char'} changes value from '480' to '224' [-Woverflow]
  124 |         img_get_int(480, 320, (int8_t*)input->data.int8);
      |                     ^~~
/home/vl/esp32/project_my/esp32s3_lvgl/components/tensorflow_lite/function.cc:124:26: warning: unsigned conversion from 'int' to 'uint8_t' {aka 'unsigned char'} changes value from '320' to '64' [-Woverflow]
  124 |         img_get_int(480, 320, (int8_t*)input->data.int8);
      |                          ^~~
ninja: build stopped: subcommand failed.
